--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URI=1234
+MONGO_URI=mongodb+srv://nawodirishini88:RishiniProject2@cluster0.i4i7feq.mongodb.net/Inventory_Management_App?
+retryWrites=true&w=majority&appName=Cluster0
