--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@
 
 MONGO_URI=mongodb+srv://nawodirishini88:RishiniProject2@cluster0.i4i7feq.mongodb.net/Inventory_Management_App?
 retryWrites=true&w=majority&appName=Cluster0
+
+
+NODE_ENVIRONMENT=developing
