create new user registration part

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ MONGO_URI=mongodb+srv://nawodirishini88:RishiniProject2@cluster0.i4i7feq.mongodb
 retryWrites=true&w=majority&appName=Cluster0
 
 
-NODE_ENVIRONMENT=developing
+NODE_ENV = productions
