--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
