create send email functio

--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,8 @@ retryWrites=true&w=majority&appName=Cluster0
 
 NODE_ENV = productions
 
-JWT_SECRET = Rishini12345Nawodi6789
+JWT_SECRET = Rishini123455Nawodi6789
+
+EMAIL_HOST = smpt-mail.outlook.com
+EMAIL_USER= Rishini1234@outlook.com
+EMAIL_PASS='rishini@1234'
