--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "i": "^0.3.7",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
