forgot password controlller function creating rest part

--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,5 @@ JWT_SECRET = Rishini123455Nawodi6789
 EMAIL_HOST = smpt-mail.outlook.com
 EMAIL_USER= Rishini1234@outlook.com
 EMAIL_PASS='rishini@1234'
+
+FRONTEND_URL = http://localhost:5000
