--- a/backend/.env
+++ b/backend/.env
@@ -4,9 +4,9 @@ MONGO_URI=mongodb+srv://nawodirishini88:RishiniProject2@cluster0.i4i7feq.mongodb
 retryWrites=true&w=majority&appName=Cluster0
 
 
-NODE_ENV = productions
+NODE_ENV = development
 
-JWT_SECRET = Rishini123455Nawodi6789
+JWT_SECRET = Rishini123
 
 EMAIL_HOST = smpt-mail.outlook.com
 EMAIL_USER= Rishini1234@outlook.com
