--- a/backend/.env
+++ b/backend/.env
@@ -9,7 +9,7 @@ NODE_ENV = development
 JWT_SECRET = Rishini123
 
 EMAIL_HOST = smpt-mail.outlook.com
-EMAIL_USER= Rishini1234@outlook.com
-EMAIL_PASS='rishini@1234'
+EMAIL_USER=StockMaster94@outlook.com
+EMAIL_PASS='rishini@123'
 
-FRONTEND_URL = http://localhost:5000
+FRONTEND_URL = http://localhost:3000
