--- a/backend/.env
+++ b/backend/.env
@@ -8,8 +8,8 @@ NODE_ENV = development
 
 JWT_SECRET = Rishini123
 
-EMAIL_HOST = smpt-mail.outlook.com
-EMAIL_USER=StockMaster94@outlook.com
+EMAIL_HOST = smtp-mail.outlook.com
+EMAIL_USER = StockMaster94@outlook.com
 EMAIL_PASS='rishini@123'
 
 FRONTEND_URL = http://localhost:3000
