--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,27 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "dompurify": "^3.1.6",
+    "https-browserify": "^1.0.0",
     "react": "^18.3.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.7",
+    "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
