--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "babel-preset-react-app": "^10.0.1",
     "dompurify": "^3.1.6",
+    "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
     "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
