--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
+    "install": "^0.13.0",
     "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
