--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 
-MONGO_URI=mongodb+srv://nawodirishini88:RishiniProject2@cluster0.i4i7feq.mongodb.net/Inventory_Management_App?
-retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://nawodirishini88:RishiniProject2@cluster0.i4i7feq.mongodb.net/Inventory_Management_App?
+# retryWrites=true&w=majority&appName=Cluster0
+
+MONGO_URI=mongodb+srv://nawodirishini88:rishi12@cluster0.bykbk7i.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
 NODE_ENV = development
