--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,6 @@ retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV = development
 JWT_SECRET = Rishini123
 EMAIL_HOST = smtp-mail.outlook.com
-EMAIL_USER = kalihunter418@gmail.com
-EMAIL_PASS='gdmi gfzv zaej mzts'
+EMAIL_USER = StockMaster94@gmail.com
+EMAIL_PASS= aqqs yram drbs nbbh
 FRONTEND_URL = http://localhost:3000
