--- a/backend/.env
+++ b/backend/.env
@@ -7,5 +7,5 @@ NODE_ENV = development
 JWT_SECRET = Rishini123
 EMAIL_HOST = smtp-mail.outlook.com
 EMAIL_USER = StockMaster94@gmail.com
-EMAIL_PASS= aqqs yram drbs nbbh
+EMAIL_PASS= 'aqqs yram drbs nbbh'
 FRONTEND_URL = http://localhost:3000
